<resources>
    <string name="app_name">DACS</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">Select API</string>
    <string name="label_usuario">Usuarios</string>
    <string name="label_producto">Productos</string>
    <string name="label_pedido">Pedidos</string>
    <string name="label_rol">Roles</string>
    <string name="label_proveedor">Proveedores</string>
    <string name="label_categoria">Categorias</string>
    <string name="label_mediodepago">Medios de Pago</string>

    <string name="hint_id">ID</string>
    <string name="hint_name">Name</string>
    <string name="button_find">>> Find</string>
    <string name="button_add">Add New</string>
    <string name="button_getAll">Get All</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>

    <string name="title_usuarios">Usuarios</string>
    <string name="title_productos">Productos</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_roles">Roles</string>
    <string name="title_proveedores">Proveedores</string>
    <string name="title_categorias">Categorias</string>
    <string name="title_mediosDePago">Medios de Pago</string>

    <string name="hint_apellido">Apellido</string>
    <string name="hint_cuit">CUIT</string>
    <string name="hint_email">Email</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_pais">Pais</string>
    <string name="hint_provincia">Provincia</string>
    <string name="hint_localidad">Localidad</string>
    <string name="hint_codigoPostal">Codigo Postal</string>
    <string name="hint_direccion">Direccion</string>
    <string name="hint_rol">Rol</string>

    <string name="hint_marca">Marca</string>
    <string name="hint_descripcion">Descripcion</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_comision">Comision</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_categoria">Categoria</string>
    <string name="hint_proveedor">Proveedor</string>

    <string name="hint_fecha">Fecha (DD/MM/AAAA)</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_fechapago">Fecha de Pago (DD/MM/AAAA)</string>
    <string name="hint_mediodepago">Medio De Pago</string>

</resources>
