<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearAddMedioDePago"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameNewMedioDePago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnNewMedioDePago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addMedioDePago"
        android:text="@string/button_add" />

    <LinearLayout
        android:id="@+id/linearUpdateMedioDePago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditMedioDePago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_id"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnEditMedioDePago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editMedioDePago"
            android:text="@string/button_update" />

    </LinearLayout>

</LinearLayout>