<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inputIdPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="23dp"

                    android:ems="7"
                    android:hint="@string/hint_id"
                    android:inputType="number" />

                <Button
                    android:id="@+id/findPedidoById"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:onClick="findPedidoById"
                    android:text="@string/button_find" />

                <Button
                    android:id="@+id/btnDeletePedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="23dp"
                    android:onClick="deletePedido"
                    android:text="@string/button_delete" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="13dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAddPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/inputName"
                    android:layout_alignTop="@+id/btnFindUsuario"

                    android:layout_marginTop="20dp"
                    android:onClick="ejecutar_add_pedido"
                    android:text="@string/button_add" />

                <Button
                    android:id="@+id/btnFindAllPedidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/btnAddUsuario"
                    android:layout_alignStart="@+id/btnFindUsuario"
                    android:layout_below="@+id/btnFindUsuario"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="21dp"

                    android:onClick="showAllPedidos"
                    android:text="@string/button_getAll" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/displayPedidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titlePedidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pedidos"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>